# move_data

./: .gitignore  docker-compose.yaml  docs.md  pyproject.toml  readme.md
configs/postgres/: init.sql
src/move_data/utils/: __init__.py
src/omni_move_data/extrair/: __init__.py
src/omni_move_data/salvar/: __init__.py
