[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'omni_move_data'
version = '0.0.1'
description = 'functions to help to move data'
dependencies = [
    "pandas=^2.2.1",
    "SQLAlchemy=^2.0.28",
    "psycopg2=^2.9.9",
    "oracledb=^2.1.0",
    "pyarrow=^15.0.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/omni_move_data"]


